# service-discovery

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker.yml
src/: main.rs
