[package]
name = "service-discovery"
version = "0.1.0"
edition = "2021"

authors = ["kaylendog (Kaylen) <actuallyori@gmail.com>"]

[dependencies]
log = "0.4"
tokio = { version = "1", features = ["full"] }
tonic = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"

furink-proto = { git = "https://github.com/furinkapp/proto-rust.git" }
