[package]
name = "service-discovery"
version = "0.2.0"
edition = "2021"

authors = ["kaylendog (Kaylen) <actuallyori@gmail.com>"]

[dependencies]
dotenv = "0.15"
log = "0.4"
tokio = { version = "1", features = ["full"] }
tonic = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }

furink-proto = { git = "https://github.com/furinkapp/proto-rust.git" }
